--- a/app/mainpage.css
+++ b/app/mainpage.css
@@ -2,261 +2,68 @@
 html, body, #app, #app>div {
   height: 100%
 }
-.mainpage-container{
-  font-family: 'Rubik', sans-serif;
-  display: flex;
-  height: 100%;
-}
-.sidenav {
-  height: 100%;
-  width: 15%;
-  float:left;
-  background-color: #4156A6;
-  text-align: center;
-  overflow: scroll;
-} 
-.logo3 {
-  height: auto;
-  width: 80%;
-  padding-top: 10px;
-}
-.team-label{
-  color: white;
-  padding: 30px;
+
+div.main-row{
   margin: 0;
-  font-size: 170%;
-  font-weight: 400;
 }
-.team-tab-current{
-  background: white;
-  padding: 25px;
-  font-weight: 400;
-  font-size: 140%;
-  display: block;
-  width: 100%;
-  border: none;
+div.main-col{
   font-family: 'Rubik', sans-serif;
-  color: #4156A6;
+  padding: 0;
 }
-.team-tab{
+div.main-col.left{
   background: #4156A6;
-  padding: 25px;
-  font-weight: 400;
-  font-size: 140%;
-  display: block;
-  width: 100%;
-  border: none;
-  font-family: 'Rubik', sans-serif;
-  color: white;
-}
-.team-tab:hover{
-  background: #6479C8;
-}
-.team-tab-submit{
-  background: #50E3C2;
-  padding: 25px;
-  font-weight: 400;
-  font-size: 140%;
-  display: block;
-  width: 100%;
-  border: none;
-  font-family: 'Rubik', sans-serif;
-  color: white;
-}
-.team-tab-submit:hover{
-  background: #98F7E2;
-}
-.team-tab-signout{
-  background: #4A90E2;
-  padding: 25px;
-  font-weight: 400;
-  font-size: 140%;
-  display: block;
-  width: 100%;
-  border: none;
-  font-family: 'Rubik', sans-serif;
-  color: white;
-}
-.team-tab-signout:hover{
-  background: #75AAE8;
-}
-
-.btn{
-  cursor: pointer;
-  background-color: white;
-  border-radius: 10px;
-  border-color: #D9DDED;
-  color: #4156A6;
-}
-.btn:hover{
-  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.28), 0 4px 15px 0 rgba(0, 0, 0, 0.25);
-}
-
-.right-content{
-  float: left;
-  width: 85%;
-  height: 100%;
-}
-.top-bar{
-  height: 15%;
-  
-}
-.top-header{
-  font-size: 150%;
-  font-weight: 450;
-  color: #4156A6;
-  margin:0;
-  padding: 2% 5%;
-}
-.tab-btn{
-  font-family: 'Rubik', sans-serif;
-  font-weight: 450;
-  background-color: #4156A6;
-  color: #fff;
-  border: none;
-  padding: 1% 3%;
-  margin-left: 5%;
-  margin-bottom: 1px;
-  /* position: absolute;
-  bottom: 0; */
-  font-size: 100%;
-  border-radius: 5px;
-
-}
-.tab-btn:hover{
-  cursor: pointer;
-  color: #4156A6;
-  background-color: #D9DDED;
-}
-
-.total-score{
-  float: right;
   text-align: center;
-  /* font-size: 100%; */
+}
+.main-logo{
+  width: 80%;
+  height: auto;
+  margin: 20px 0 10px 0;
+  display: inline-block;
+}
+.main-menu-label{
+  color: white;
+  padding: 20px;
+  margin: 0;
+  font-size: 150%;
+  font-weight: 400;
+}
+.nav-link{
+  color: #ffffff;
+  background-color:#4156A6;
+  border-radius: 0 !important;
+  font-size: 120%;
+}
+.nav-link.active{
+  color: #4156A6 !important;
+  background-color: #ffffff !important;
+}
+.nav-link:hover{
+  background-color: #6479C8;
+  color: #ffffff;
+}
+.total-score{
+  text-align: center;
   border-radius: 17.5px;
   background-color: #6479C8;
   padding: 5px 10px;
   color: white;
-  margin-right: 5%;
   margin-bottom: 10px;
 } 
-
-.main-container{
-  height: 80%;
-  padding-top: 50px;
-  /* padding: 3% 3%; */
-  background: #D9DDED;
-}
-.main-content-box{
-  height: 90%;
-  width: 90%;
-  margin: auto;
-  background: white;
-  border-radius: 10px;
-  /* padding-bottom: 3%; */
-}
-.main-header{
-  font-size: 120%;;
-  font-weight: 400;
-  color: #4156A6;
-  padding-top: 3%;
-  margin: 0; 
-  padding-left: 5%;
-}
-.main-header-appname{
-  display: inline-block;
-  font-weight: 500;
-  font-size: 140%;;
-  color: #4156A6;
-  padding-top: 5%;
-  margin: 0; 
-  padding-left: 5%;
-}
-.save-btn{
-  cursor: pointer;
-  float: right;
-  font-size: 140%;
-  background: white;
-  color: #4156A6;
-  border-color: #4156A6;
-  border-radius: 5px;
-  border-width: 4px;
-  padding: 4px 15px;
-  margin: 3% 20px;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.28), 0 1px 2px 0 rgba(0, 0, 0, 0.25);
-
-}
-#save-btn:hover{
-  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.28), 0 4px 15px 0 rgba(0, 0, 0, 0.25);
-}
-.main-content{
-  font-size: 100%;
-  padding-left: 5%;
-  padding-right: 5%;
-}
-.score-critiria-odd{
-  display: inline-block;
-  margin-bottom: 10px;
-  margin-top: 10px;
-  font-size: 130%;
-  padding-left: 5%;
-  padding-right: 5%;
-
-}
-.score-critiria{
-  display: inline-block;
-  font-size: 130%;
-  padding-left: 5%;
-  padding-right: 5%;
-
-}
-.score-slider{
-  float: right;
-  margin-right: 5%;
-  background-color: #D9DDED;
-  color: #4156A6;
-  font-size: 100%;
-  border: none;
-  border-radius: 3px;
-  padding: 5px;
-  /* -webkit-appearance: button; */
-}
-
-.score-input{
-  color: #4156A6;
-  background-color: #D9DDED;
-  border: none;
-  border-radius: 5px;
-  float: right;
-  margin-right: 5%;
-  font-size: 100%;
-  text-align: center;
-}
-.score-slider:hover{
-  cursor: pointer;
-}
-.score-input:hover{
-  background-color: #D9DDED;
-}
-
 .custom-dropdown {
   position: relative;
   display: inline-block;
-  /* float: right; */
   vertical-align: middle;
   margin: 6px; /* demo only */
 }
 .checkmarks {
   height: auto;
-  width: 13%;
-  padding-top: 3px;
-  margin-left: 5%;
-  margin-bottom: 0px;
+  width: 15%;
+  margin-left: 15px;
+  margin-bottom: 5px;
 }
-
 .custom-dropdown select {
   background-color: #D9DDED;
-  color: #4156A6;
+  color: rgb(101, 102, 109);
   font-size: inherit;
   padding: .2em;
   padding-right: 2.5em; 
@@ -267,14 +74,12 @@ html, body, #app, #app>div {
   text-overflow: '';
   -webkit-appearance: button; /* hide default arrow in chrome OSX */
 }
-
 .custom-dropdown::before,
 .custom-dropdown::after {
   content: "";
   position: absolute;
   pointer-events: none;
 }
-
 .custom-dropdown::after { /*  Custom dropdown arrow */
   content: "\25BC";
   height: 1em;
@@ -284,7 +89,6 @@ html, body, #app, #app>div {
   top: 50%;
   margin-top: -.5em;
 }
-
 .custom-dropdown::before { /*  Custom dropdown arrow cover */
   width: 2em;
   right: 0;
@@ -292,12 +96,78 @@ html, body, #app, #app>div {
   bottom: 0;
   border-radius: 0 3px 3px 0;
 }
-
-
 .custom-dropdown::before {
   background-color: rgba(0,0,0,.10);
 }
-
 .custom-dropdown::after {
   color: rgba(0,0,0,.2);
+}
+
+div.container-fluid{
+  padding: 0;
+}
+.main-teamname-header{
+  color: #4156A6;
+  font-size: 180%;
+  font-weight: 500;
+  padding: 30px;
+}
+.main-header{
+  color: #4156A6;
+  font-size: 140%;
+  font-weight: 500;
+  padding: 20px 0 0 30px;
+}
+.pane-tab{
+  border-radius: 5px;
+  border-width: 3px;
+  border-color: #D9DDED;
+  color: #4156A6;
+  font-weight: 500;
+  margin: 5px 10px 10px 30px;
+}
+.pane-tab:hover{
+  cursor: pointer;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.75);
+}
+div.main-container{
+  background: #ffffff;
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.75);
+
+}
+.main-contain-wrapper{
+  background: #D9DDED;
+  padding: 30px;
+}
+.main-content-header{
+  color: #4156A6;
+  font-size: 120%;
+  font-weight: 470;
+  padding-top: 20px;
+  padding-left: 10px;
+}
+.main-content{
+  color: rgb(101, 102, 109);
+  font-size: 110%;
+  font-weight: 400;
+  padding-left: 20px;
+  padding-right: 10px;
+  margin: 0;
+}
+.main-content.last{
+  padding-bottom: 20px;
+}
+div.main-content-row{
+  margin: 0;
+}
+.main-content.pts{
+  color: rgb(101, 102, 109);
+  font-size: 110%;
+  font-weight: 400;
+  padding: 0 !important;
+  margin: 0;
+}
+small{
+  color: rgb(116, 117, 122);
 }
